# big_central

./: .envrc  .gitignore  .gitmodules  Dockerfile  README.md  fly.toml  logfile  mix.exs
assets/: build.js  gen_proto.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
assets/js/: app.ts  auth.ts  auth_page.ts  bfsp.cli.ts  bfsp.ts  efs.ts  efs_http.ts  efs_wc.ts  efs_wt.ts  file_view.ts  files.ts  login.ts  signup.ts  socket.ts  view_file.ts  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
assets/js/src/: bfsp.cli.ts  bfsp.ts
assets/native/: result
assets/native/src/: lib.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: bfsp.internal.pb.ex  bfsp.pb.ex  big_central.ex  big_central_web.ex  internal_bbfs_api.ex
lib/big_central/: accounts.ex  application.ex  biscuit.ex  dl_tokens.ex  efs.ex  macaraoon.ex  mailer.ex  release.ex  repo.ex  tokens.ex  users.ex  validation.ex
lib/big_central/accounts/: user.ex  user_notifier.ex  user_token.ex
lib/big_central/tokens/: dl_token.ex  revoked_tokens.ex  token.ex
lib/big_central/users/: token.ex  user.ex
lib/big_central_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
lib/big_central_web/components/: core_components.ex  (+1 more)
lib/tasks/: build_wasm.ex
native/: biscuit_auth
priv/repo/: seeds.exs
test/: test_helper.exs
test/big_central/: accounts_test.exs  users_test.exs
test/big_central_web/: user_auth_test.exs
test/support/: conn_case.ex  data_case.ex
wasm/: .gitignore  Cargo.toml  flake.nix  result
wasm/src/: lib.rs
(+58 files in other folders)
