[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[dependencies]
wasm-bindgen = { version = "=0.2.91" }
bfsp = { path = "./bfsp/" }
time = { version = "*", features = ["macros", "wasm-bindgen"] }
console_error_panic_hook = "0.1.7"
